Sarthak | Updates TODO

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-- Check the byte array size in KeyValuePair
+- Check the byte array size in KeyValuePair (NA)
 - Error handling
 - Ensure all file descriptors are closed
 - Handle hardcoded memory mapped file size
